Cleanup of Code

--- a/UI_Config.json
+++ b/UI_Config.json
@@ -167,7 +167,7 @@
 	  },
 	"MonsterPermissionResp": {
         "type": "textbox",
-		"value": "$user -> only $permission ($permissioninfo) and higher can use this command",
+		"value": "{0} -> only $permission ($permissioninfo) and higher can use this command",
 		"label": "Permission denied response",
 		"tooltip": "Message sent when user doesn't have the correct permission",
 		"group": "Add Monster"
